<resources>
    <string name="app_name">Getir Lite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_image">food image</string>
    <string name="add_item">Add Item</string>
    <string name="products">Ürünler</string>
    <string name="product_details">Ürün Detayı</string>
    <string name="_0_00">₺0,00</string>
    <string name="_2000_00">₺20000,00</string>
    <string name="price_format">₺%,1.2f</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="basket_title">Sepetim</string>
    <string name="basket_button_text">Siparişi Tamamla</string>
    <string name="basket_delete_dialog_text">Sepetini boşaltmak istediğinden emin misin?</string>
    <string name="no">Hayır</string>
    <string name="yes">Evet</string>
    <string name="delete">Delete</string>
    <string name="suggested_product">Önerilen Ürünler</string>
    <string name="complete_dialog">Siparişinizi verdiniz 🙂 Sosyal teması azaltmak için siparişinizi kapınıza bırakacağız.</string>
    <string name="complete">Tamam</string>
    <string name="total_price">Toplam Tutar: %s</string>
    <style name="product_name">Product Name</style>

    <string name="generic_error">Some error occurred, try again.</string>
    <string name="image">Image</string>
    <string name="basket_already_empty">Your basket is already empty, you can add something…</string>

    <style name="attribute">Attribute</style>
</resources>
