<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".feature.detail.DetailFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_details"
        android:textColor="?attr/colorSurface"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <include
        android:id="@+id/layout_total_price_card"
        layout="@layout/total_price_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="@dimen/detail_image_size"
                android:layout_height="@dimen/detail_image_size"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/food_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/food" />

            <TextView
                android:id="@+id/tv_food_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_0_00"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/_0_00" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="Product Name"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:textSize="16sp"
                tools:text="Product Name" />

            <TextView
                android:id="@+id/tv_product_attribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Attribute"
                android:textFontWeight="600"
                android:textSize="12sp"
                tools:text="Attribute" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/bg_top_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_total_price" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_add_to_basket"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/add_to_basket"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.patika.getir_lite.ui.ActionCardHrView
            android:id="@+id/item_action_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/bg_top_shadow" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
