<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.listing.ListingFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textColor="?attr/colorSurface"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_shopping"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/colorSurface"
                android:contentDescription="@string/add_item"
                android:padding="4dp"
                android:src="@drawable/ic_bag" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/colorTertiary"
                android:gravity="center"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:text="@string/_0_00"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                tools:text="₺200,00" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/layout_suggested_product"
        layout="@layout/suggested_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorSurface"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_suggested_product"
        tools:ignore="RtlSymmetry">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <GridLayout
                android:id="@+id/gl_product_shimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include
                    style="@style/GridShimmerViewStyle"
                    layout="@layout/item_listing_shimmer" />

                <include layout="@layout/item_listing_shimmer" />

                <include layout="@layout/item_listing_shimmer" />

                <include layout="@layout/item_listing_shimmer" />
            </GridLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorSurface"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry"
            tools:listitem="@layout/item_listing" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
